--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "name": "cakefactorybackend",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "src/index.js",
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.0.0",
@@ -20,7 +21,9 @@
     "nodemon": "^3.1.0"
   },
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
