added two unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,node,macos
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
